--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,37 +1,73 @@
-<div
-  style="text-align: center"
-  class="container"
-  [style.width.px]="width"
-  [style.height.px]="height"
->
-  <button (click)="previousRestaurant()" class="nav-button">&lt;</button>
-  <!-- <div *ngFor="let restaurant of filteredRestaurantsList"> -->
-  <div class="content">
-    <div class="name">{{ selectedRestaurant?.name }}</div>
-    <div>
-      <star-rating
-        [value]="selectedRestaurant?.rating.toString()"
-        totalstars="5"
-        checkedcolor="yellow"
-        uncheckedcolor="white"
-        size="24px"
-        readonly="false"
-      ></star-rating>
-      ({{ selectedRestaurant?.user_ratings_total }} reviews)
-    </div>
-    <div>
-      <a [href]="selectedRestaurant?.url" target="_blank">TAKE ME THERE!</a>
-    </div>
-  </div>
-  <img
-    [src]="photoUrl(selectedRestaurant?.photos[0]?.photo_reference)"
-    [alt]="selectedRestaurant?.name"
-    class="photo"
-    [style.width.px]="width"
-    [style.height.px]="height"
-  />
-  <!-- </div> -->
-  <button (click)="nextRestaurant()" class="nav-button">&gt;</button>
+<div class="example-container" [class.example-is-mobile]="true">
+  <mat-toolbar color="primary" class="example-toolbar">
+    <button mat-icon-button (click)="snav.toggle()">
+      <mat-icon>menu</mat-icon>
+    </button>
+    <h1 class="example-app-name">RestauX</h1>
+  </mat-toolbar>
+
+  <mat-sidenav-container
+    class="example-sidenav-container"
+    [style.marginTop.px]="56"
+  >
+    <mat-sidenav
+      #snav
+      [mode]="'over'"
+      [fixedInViewport]="true"
+      fixedTopGap="56"
+    >
+      data
+    </mat-sidenav>
+
+    <mat-sidenav-content>
+      <div
+        style="text-align: center"
+        class="container"
+        [style.width.px]="width"
+        [style.height.px]="height"
+        *ngIf="selectedRestaurant; else spinner"
+      >
+        <button (click)="previousRestaurant()" class="nav-button">&lt;</button>
+        <!-- <div *ngFor="let restaurant of filteredRestaurantsList"> -->
+        <div class="content">
+          <div class="name">{{ selectedRestaurant?.name }}</div>
+          <div>
+            <star-rating
+              [value]="selectedRestaurant?.rating.toString()"
+              totalstars="5"
+              checkedcolor="yellow"
+              uncheckedcolor="white"
+              size="24px"
+              readonly="false"
+            ></star-rating>
+            ({{ selectedRestaurant?.user_ratings_total }} reviews)
+          </div>
+          <div>
+            <a
+              [href]="selectedRestaurant?.url"
+              target="_blank"
+              class="maps-link"
+              >Open in Maps</a
+            >
+          </div>
+        </div>
+        <img
+          [src]="photoUrl(selectedRestaurant?.photos[0]?.photo_reference)"
+          [alt]="selectedRestaurant?.name"
+          class="photo"
+          [style.width.px]="width"
+          [style.height.px]="height"
+        />
+        <!-- </div> -->
+        <button (click)="nextRestaurant()" class="nav-button">&gt;</button>
+      </div>
+      <ng-template #spinner>
+        <div class="spinner">
+          <mat-spinner></mat-spinner>
+        </div>
+      </ng-template>
+    </mat-sidenav-content>
+  </mat-sidenav-container>
 </div>
 
 <router-outlet></router-outlet>
