--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -50,6 +50,9 @@
               >Open in Maps</a
             >
           </div>
+          <button mat-flat-button color="primary" (click)="openBottomSheet()" class="review-button">
+            Reviews
+          </button>
         </div>
         <img
           [src]="photoUrl(selectedRestaurant?.photos[0]?.photo_reference)"
