--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,27 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
-@import url('https://fonts.googleapis.com/css2?family=Merienda&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Yusei+Magic&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Merienda&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Yusei+Magic&display=swap");
 
 body {
   margin: 0 !important;
 }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+mat-bottom-sheet-container {
+  border-radius: 20px 20px 0 0 !important;
+  // background: #a9b7d8ab;
+  // background: url("https://i.pinimg.com/736x/53/2e/23/532e23c….jpg");
+  // color: #fff;
+  // padding-left: 40px;
+  // padding-top: 75px;
+  // background-size: cover;
+  // color: #000;
+}
