--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,66 +1,4 @@
-.container {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  color: #fff;
-}
-
-.photo {
-  filter: brightness(0.3);
-  position: absolute;
-  z-index: -1;
-}
-.nav-button {
-  width: 50px;
-  height: 50px;
-  color: #fff;
-  font-size: 48px;
-  font-weight: bolder;
-  background: #555;
-  opacity: 0.5;
-  filter: brightness(0.3);
-  align-self: center;
-}
-.content {
-  align-self: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  height: 30%;
-  font-family: "Yusei Magic", sans-serif;
-  align-items: center;
-}
-.name {
-  font-size: 36px;
-}
-.review-button {
-  border: 0;
-  border-radius: 10px;
-  width: 100px;
-  height: 30px;
-  color: #fff;
-  background: #558;
-  font-family: "Yusei Magic", sans-serif;
-}
-.maps-link {
-  color: #fff;
-  text-decoration: none;
-}
-.spinner {
-  display: flex;
-  justify-content: center;
-  height: 100%;
-}
-.example-app-name {
-  font-family: "Merienda", cursive;
-}
-
-// Mat styles
-.mat-progress-spinner {
-  align-self: center;
-}
-
-.example-container {
+.app-container {
   display: flex;
   flex-direction: column;
   position: absolute;
@@ -70,34 +8,7 @@
   right: 0;
 }
 
-.mat-icon {
-  color: #fff;
-}
-
-.example-is-mobile .example-toolbar {
-  position: fixed;
-  /* Make sure the toolbar will stay on top of the content as it scrolls past. */
-  z-index: 2;
-  background: transparent;
-  button {
-    background: transparent;
-    border: 0;
-  }
-}
-
-h1.example-app-name {
-  margin-left: 8px;
-}
-
-.example-sidenav-container {
-  /* When the sidenav is not fixed, stretch the sidenav container to fill the available space. This
-     causes `<mat-sidenav-content>` to act as our scrolling element for desktop layouts. */
-  flex: 1;
-  margin-top: 0 !important;
-}
-
-.example-is-mobile .example-sidenav-container {
-  /* When the sidenav is fixed, don't constrain the height of the sidenav container. This allows the
-     `<body>` to be our scrolling element for mobile layouts. */
+.sidenav-container {
   flex: 1 0 auto;
+  margin-top: 0 !important;
 }
