Improved reviews UI

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,14 @@
 <div class="app-container">
   <app-header [title]="title" (toggle)="snav.toggle()"></app-header>
   <mat-sidenav-container class="sidenav-container">
+    <!-- try mode over -->
     <mat-sidenav
       #snav
-      [mode]="'over'"
+      [mode]="'push'"
       [fixedInViewport]="true"
       fixedTopGap="56"
     >
-      data
+      Work in Progress ;)
     </mat-sidenav>
 
     <mat-sidenav-content>
