--- a/src/app/components/bottom-sheet/bottom-sheet.component.html
+++ b/src/app/components/bottom-sheet/bottom-sheet.component.html
@@ -1,3 +1,7 @@
-<div *ngFor="let review of data?.reviews; let i = index">
-  <b>{{ review?.author_name }}:</b> {{ review?.text }}
+<div *ngFor="let review of data?.reviews; let i = index" class="review">
+  <div class="author">
+    <img [src]="review?.profile_photo_url" class="profile-photo" />
+    <b>{{ review?.author_name }}</b>
+  </div>
+  <p>{{ review?.text }}</p>
 </div>
