--- a/src/app/components/bottom-sheet/bottom-sheet.component.scss
+++ b/src/app/components/bottom-sheet/bottom-sheet.component.scss
@@ -1,13 +1,21 @@
-.profile-photo {
-  width: 30px;
-  height: 30px;
-  margin-right: 10px;
-}
-.review {
+.review-list {
   display: flex;
   flex-direction: column;
 }
-.author {
+.review-header {
   display: flex;
   align-items: center;
+}
+.profile-pic {
+  width: 35px;
+  height: 35px;
+  margin-right: 10px;
+}
+.review-stats {
+  height: 35px;
+  width: 100%;
+}
+.author {
+  display: flex;
+  justify-content: space-between;
 }
