--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="app-container">
+<div class="app-container" *ngIf="isMobile; else openInMobile">
   <app-header [title]="title" (toggle)="snav.toggle()"></app-header>
   <mat-sidenav-container class="sidenav-container">
     <!-- try mode over -->
@@ -21,5 +21,22 @@
     </mat-sidenav-content>
   </mat-sidenav-container>
 </div>
+<ng-template #openInMobile>
+  <div style="background: url('../assets/404.jpg'); width: 100%; height: 100%">
+    <p
+      style="
+        width: 100%;
+        padding-top: 20px;
+        margin-top: 0;
+        color: #fff;
+        font-size: 24px;
+        text-align: center;
+        font-family: 'Yusei Magic', sans-serif;
+      "
+    >
+      For best experience, open in mobile!
+    </p>
+  </div>
+</ng-template>
 
 <router-outlet></router-outlet>
